running into some code first DB issues

--- a/Errands/appsettings.json
+++ b/Errands/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Errands;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDefault": "Server=(localdb)\\MSSQLLocalDB;Database=ApplicationDbContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
